fix navbar width on narrowest screens

--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ section a{
 @media only screen and (max-width: 539px){
 
     nav{
-        width: calc(100% - 40px);
+        width: calc(100vw - 40px);
         padding-left: 20px;
         padding-right: 20px;
     }
